--- a/src/app/shared/components/file-list-item/file-list-item.component.scss
+++ b/src/app/shared/components/file-list-item/file-list-item.component.scss
@@ -5,6 +5,7 @@
 :host {
   display: flex;
   padding: mixins.rem(4) mixins.rem(8);
+  overflow: hidden;
   flex-flow: row;
   background: var(--mat-sys-surface-container-low);
   align-items: center;
